fixed responsiveness of the announcement to be revisioned in revisor zone + minor fixes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11968,6 +11968,7 @@ header.presto-nav {
     transform: rotate(90deg);
     transition: all 0.8s;
 }
+
 :root{
     --main-color: #B2EDC5;
     --sec-color: #FFB800;
@@ -11992,24 +11993,27 @@ header.presto-nav {
 .rowToCheck{
     max-width: 600px;
     border-radius: 20px;
-    height: 200px;
+    height: 150px;
     position: relative;
 }
 
 .revisorBtns{
     border-radius: 30px;
     padding: 10px 20px;
+    width: 230px;
 }
 
 .divDiv{
     border-radius: 50%;
-    border: 3px solid rgb(0, 85, 255);
+    border: 3px solid var(--papaya);
     overflow: hidden;
+    z-index: 100;
+    background-color: var(--panna);
 }
 
 .bellaFotoDiv{
-    width: 200px!important;
-    height: 200px!important;
+    width: 220px!important;
+    height: 220px!important;
 }
 
 .bellaFoto{
@@ -12024,18 +12028,25 @@ header.presto-nav {
 }
 
 .revisionBox{
-    border: 2px solid rgb(0, 85, 255);
-    border-radius: 100px;
-    max-width: 800px;
+    max-width: 900px;
 }
 
-.priceAndCreated{
+.infoBox{
+    padding-top: 100px;
+    border: 2px solid #dd3324cd;
+    border-radius: 50px;
+    transform: translateY(-110px);
+    background-color: #dd3324cd;
+    height: 440px;
+}
+
+/* .priceAndCreated{
     position: absolute;
     bottom: 16px;
-}
+} */
 
 .titleToCheck{
-    transform: translateX(-18px);
+    /* transform: translateX(-18px); */
     /* background-color: green; */
     margin-top: 8px;
     padding-top: 8px;
@@ -12043,22 +12054,38 @@ header.presto-nav {
 }
 
 .descriptionToCheck{
-    transform: translateX(10px);
+    /* transform: translateX(10px); */
     margin-top: 6px;
+    max-width: 90%;
 }
 
-.priceToCheck{
-    transform: translateX(-4px);
+#prevNext{
+    z-index: 120;
 }
 
-.createdToCheck{
-    transform: translateX(-22px);
+.buttonsRow{
+    position: absolute;
+    bottom: -60px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .announceCard{
     border: 1px solid black;
     border-radius: 30px;
     height: 112px;
+}
+
+.revisionLabels{
+    font-size: 14px;
+    padding-top: 10px;
+}
+
+.rowToCheck > h5 > a{
+    text-decoration: none;
+    color: var(--bs-body-color);
+    font-size: 18px;
+    font-weight: 600;
 }
 
 .titleSpan{
@@ -12101,21 +12128,27 @@ textarea{
 }
 
 @-webkit-keyframes bounce {
-    0%, 20%, 40%, 100% {
+    0%, 20%, 40%, 60%, 100% {
 		transform:         translateY(0)
 	}
 	30% {
 		transform:         translateY(-20px)
 	}
+    50% {
+		transform:         translateY(-10px)
+    }
 }
 
 @keyframes bounce {
-    0%, 20%, 40%, 100% {
+    0%, 20%, 40%, 60%, 100% {
 		transform:         translateY(0)
 	}
 	30% {
 		transform:         translateY(-20px)
 	}
+    50% {
+		transform:         translateY(-10px)
+    }
 }
 
 .bounce_button {
@@ -12322,22 +12355,28 @@ textarea{
 
 
     @-webkit-keyframes bounce {
-        0%, 20%, 40%, 100% {
+        0%, 20%, 40%, 60%, 100% {
             transform:         translateX(0)
         }
         30% {
-            transform:         translateX(-30px)
+            transform:         translateX(-20px)
+        }
+        50% {
+            transform:         translateX(-10px)
         }
     }
     
 
 
     @keyframes bounce {
-        0%, 20%, 40%, 100% {
+        0%, 20%, 40%, 60%, 100% {
             transform:         translateX(0)
         }
         30% {
-            transform:         translateX(-30px)
+            transform:         translateX(-20px)
+        }
+        50% {
+            transform:         translateX(-10px)
         }
     }
 
@@ -12352,6 +12391,7 @@ textarea{
     #contactUsLeftPart{
         text-align: end;
     }
+    
 }
 
 @media screen and (min-width: 992px){
@@ -12367,6 +12407,72 @@ textarea{
         background-size: cover;
     }
 
+    .titleToCheck{
+        transform: translateX(-18px);
+        font-size: 26px;
+    }
+
+    #categoryToCheckLabel, #descriptionToCheckLabel{
+        padding-top: 6px;
+    }
+
+    #categoryToCheck{
+        transform: translateX(8px);
+    }
+        
+    .descriptionToCheck{
+        transform: translateX(-30px);
+        font-size: 18px;
+    }
+
+    .priceToCheck{
+        transform: translateX(-4px);
+    }
+
+    .createdToCheck{
+        transform: translateX(-22px);
+    }
+
+    .rowToCheck{
+        height: 200px;
+    }
+    
+    .revisionBox{
+        background-color: #dd3324cd;
+        border-radius: 100px;
+    }
+
+    .infoBox{
+        border: none;
+        background-color: transparent;
+        height: 200px;
+    }
+    
+    .buttonsRow{
+        bottom: -80px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+        
+    .createdToCheckDiv{
+        position: absolute;
+        bottom: -75px;
+        right: 40px;
+    }
+
+    .priceToCheckDiv{
+        position: absolute;
+        bottom: 25px;
+        right: 60px;
+    }
+
+    #priceLabel{
+        transform: translateX(-18px);
+    }
+
+    #titleToCheckLabel{
+        transform: translateX(-30px);
+    }
 }
 
 @media screen and (min-width: 1200px){
@@ -12413,7 +12519,7 @@ textarea{
     color: var(--papaya);
 }
 
-h5{
+#footerH5{
     color: var(--panna);
 }
 .nav-item {
