completed home navbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11862,7 +11862,7 @@ body {
 }    
 
 .presto-nav .nav-link, .presto-nav .nav-link.active{
-    color: var(--panna) !important;
+    color: var(--panna);
     transform: scale(1.1);
 }    
 
@@ -11882,11 +11882,10 @@ body {
 .dropBg{
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 15px;
-    color: var(--obsidianGray);
-    
+    width: 190px;
 }
 .dropdown-item{
-    color: var(--obsidianGray);
+    color: black;
 }
 .dropdown-menu{
     color: var(--obsidianGray);
@@ -11894,12 +11893,13 @@ body {
 }
 
 .badge-class{
-    right: 2px;
+    right: 0px;
 }
 
 .title-nav{
     font-size: 50px;
     font-family:'Montserrat Alternates', sans-serif;
+    padding-left: 20px;
 }
 
 .title-nav:hover{
@@ -11914,7 +11914,7 @@ body {
   /*NAVGENERAL */
 
 .presto-nav-general .nav-link, .presto-nav .nav-link.active{
-    color: var(--panna) !important;
+    color: var(--panna);
     transform: scale(1.1);
 }    
 
@@ -11925,20 +11925,16 @@ body {
 
 .presto-nav-general{
     text-align:center;
+    
 }   
 
-.presto-nav-general ul .dropdown-menu{
+/* .presto-nav-general ul .dropdown-menu{
     background-color: rgba(255, 255, 255, 0.5);
-}
+} */
 
-.badge-class{
-    right: 2px;
-}
 
-.title-nav{
-    font-size: 50px;
-    font-family:'Montserrat Alternates', sans-serif;
-}
+
+
 
 .nav-item {
     
@@ -11993,6 +11989,48 @@ nav.presto-nav {
     border: transparent;
     transform: rotate(90deg);
     transition: all 0.8s;
+}
+
+.dropBg1{
+    background-color:rgba(255, 255, 255, 0.5);
+    border-radius: 15px;
+}
+.dropBg1 > li > a, .dropBg1 > a{
+    color: black !important;
+
+}
+
+
+@media screen and (min-width: 768px){
+    .dropBg{
+        background-color: rgba(255, 255, 255, 0.5);
+        color: var(--panna);
+        transform: translateX(-30px);
+        padding: 15px 30px;
+    }
+    .dropBg > li > a, .dropBg > a{
+        color: black;
+
+    }
+    .dropdown-item{
+        color: var(--panna);
+    }
+
+    .dropBg1{
+        background-color: transparent;
+    }
+    
+    .badge-class{
+        right: -26px;
+    }
+    
+    .dropBg1 > li > a, .dropBg1 > a{
+        color:var(--panna) !important;
+    
+    }
+    .title-nav{
+        padding-left: 60px;
+    }
 }
 
 :root{
