refactoring categories cards

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -344,7 +344,7 @@ body {
     height: 150px;
     width: 220px;
     /* background-color: var(--starry); */
-    background-image: url("https://img.freepik.com/free-photo/female-driver-driving-green-neon-color-motorcycle-road_114579-5032.jpg?t=st=1656249870~exp=1656250470~hmac=7957edba1419e64ebd505600d1c841d4c321ead83436c69bce0c9c4541d673e7&w=1380");
+    /* background-image: url("https://img.freepik.com/free-photo/female-driver-driving-green-neon-color-motorcycle-road_114579-5032.jpg?t=st=1656249870~exp=1656250470~hmac=7957edba1419e64ebd505600d1c841d4c321ead83436c69bce0c9c4541d673e7&w=1380"); */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
