--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12056,8 +12056,16 @@ nav.presto-nav {
 
 :root{
     --main-color: #B2EDC5;
-    --sec-color: #FFB800;
+    --sec-color: #fee440;
     --custom-black: #000000d5;
+}
+
+.secColor{
+    color: var(--sec-color);
+}
+
+.dropdown-divider{
+    color: black;
 }
 
 .allCards{
@@ -12204,7 +12212,6 @@ textarea{
     background-image: url(/media/Animated\ Shape\ \(7\).svg);
     background-repeat: no-repeat;
     background-size: cover;
-    border-top: 2px solid var(--sec-color);
 }
 
 #contactUsRow{
@@ -12352,7 +12359,7 @@ textarea{
 
 #sendApplicationBtn{
     border-style: none;
-    color: var(--custom-black);
+    color: black;
     background-color: var(--sec-color);
     height: 45px;
     width: 80%;
@@ -12623,7 +12630,7 @@ textarea{
 }
 
 .presto-foo{
-    background-color: var(--irises);
+    background-color: var(--starry);
 }
 
 .p-font:hover{
