fixes to navbar & welcome page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11536,7 +11536,7 @@ body {
 
 .skill-card {
     padding: 20px;
-    width: 22em;
+    width: 100%;
     background-color: #FAF9F9;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     cursor: pointer;
@@ -11820,7 +11820,12 @@ body {
 
 
 
+@media screen and (min-width:410px) {
 
+    .skill-card {
+        width: 22em;
+    }
+}
 
 @media screen and (min-width:768px) {
 
@@ -11880,7 +11885,8 @@ body {
 }
 .presto-nav{
     background-color:transparent;
-   
+    z-index: 2000;
+    width: 90vw;
 }    
 
 .presto-nav .nav-link, .presto-nav .nav-link.active{
@@ -11895,7 +11901,12 @@ body {
 
 .presto-nav{
     text-align:center;
+    right:0px;
 }   
+
+#navbarContainerfluid{
+    width: 100%!important;
+}
 
 .nav-link{
     color: var(--obsidianGray);
@@ -11964,7 +11975,6 @@ body {
 
 nav.presto-nav {
     width: 100%;
-    position: fixed;
     transition: 0.3s ease-in-out;
 }
 
@@ -11977,6 +11987,9 @@ nav.presto-nav {
     transform: translateX(-20px);
 }
 
+#navbarTogglerIcon{
+    color: var(--panna);
+}
 
 .presto-nav .navbar-toggler{
     color: var(--orange);
@@ -11984,18 +11997,29 @@ nav.presto-nav {
     transition: all 0.5s;
     border: none;
     font-size: 30px;
+    transform: rotate(0deg);
 }
 .presto-nav .navbar-toggler:focus{
     box-shadow: none;
 }
 
-.presto-nav .navbar-toggler.collapsed{
-    border: transparent;
+.rotateIcon{
     transform: rotate(90deg);
     transition: all 0.8s;
 }
 
-.presto-nav-general .navbar-toggler{
+.rotateIcon2{
+    transform: rotate(0deg);
+    transition: all 0.8s;
+}
+
+/* .presto-nav .collapsed{
+    border: transparent;
+    transition: all 0.8s;
+    transform: rotate(90deg);
+} */
+
+/* .presto-nav-general .navbar-toggler{
     color: var(--orange);
     border: transparent;
     transition: all 0.5s;
@@ -12010,7 +12034,7 @@ nav.presto-nav {
     border: transparent;
     transform: rotate(90deg);
     transition: all 0.8s;
-}
+} */
 
 .dropBg1{
     background-color:rgba(255, 255, 255, 0.5);
@@ -12337,7 +12361,7 @@ textarea{
 #inputFileLabel{
     display: block;
     text-align: center;
-    line-height: 220%;
+    line-height: 120%;
     border: 2px solid var(--sec-color);
     color: var(--custom-black);
     background-color: transparent;
@@ -12386,6 +12410,13 @@ textarea{
 
     #contactUsH5{
         font-size: 20px;
+    }
+}
+
+@media screen and (min-width: 401px){
+
+    #inputFileLabel{
+        line-height: 220%;
     }
 }
 
