--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -253,7 +253,7 @@ body {
 
 .skill-card {
     padding: 20px;
-    width: 22em;
+    width: 100%;
     background-color: #FAF9F9;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     cursor: pointer;
@@ -526,7 +526,12 @@ body {
 
 
 
+@media screen and (min-width:410px) {
 
+    .skill-card {
+        width: 22em;
+    }
+}
 
 @media screen and (min-width:768px) {
 
