--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -74,7 +74,8 @@
     border: 3px solid var(--starry);
     border-radius: 50px;
     transform: translateY(-110px);
-    background-color: #0493e080;
+    /* background-color: #53bdf680; */
+    background: radial-gradient(#53bdf680, var(--starry));
     height: 440px;
 }
 
@@ -111,7 +112,10 @@
 .announceCard{
     border: 1px solid black;
     border-radius: 30px;
-    height: 112px;
+    height: 100%;
+    /* display: block; */
+    overflow: auto;
+    width: 90%!important;
 }
 
 .revisionLabels{
@@ -131,11 +135,11 @@
     font-size: 20px;
 }
 
-.createdOKNO{
+/* .createdOKNO{
     position: absolute;
-    bottom: 0px;
+    bottom: -26px;
     right: 0px;
-}
+} */
 
 .deniedAccess, .welcomePageMessage{
     position: absolute;
@@ -315,8 +319,6 @@ textarea{
 }
 
 
-
-
 /* Media query */
 
 @media screen and (min-width: 393px){
@@ -346,6 +348,15 @@ textarea{
     #dotSpan{
         font-size: 50px;
     }
+}
+
+
+@media screen and (min-width: 576px){
+
+    /* .announceCard{
+        width: 100%!important;
+        height: 112px;
+    } */
 }
 
 
@@ -476,14 +487,15 @@ textarea{
     }
     
     .revisionBox{
-        background-color: #0493e080;
+        /* background-color: #53bdf680; */
+        background: radial-gradient(#53bdf680, var(--starry));
         border-radius: 100px;
         border: 3px solid var(--starry);
     }
 
     .infoBox{
         border: none;
-        background-color: transparent;
+        background: transparent;
         height: 200px;
     }
     
@@ -512,6 +524,14 @@ textarea{
     #titleToCheckLabel{
         transform: translateX(-30px);
     }
+
+    .announceCard{
+        min-width: 950px!important;
+    }
+
+    .undoLgBtn{
+        padding-left: 4px;
+    }
 }
 
 @media screen and (min-width: 1200px){
@@ -527,7 +547,10 @@ textarea{
     #contactUsFormCard:hover{
         transform: scale(1.03) translateX(-35px);
     }
-
+        
+    .createdOKNO{
+        bottom: 0px;
+    }
 }
 
 @media screen and (min-width: 1400px){
@@ -548,4 +571,7 @@ textarea{
         transform: translateX(-40px)
     }
 
+    .undoLgBtn{
+        padding: auto;
+    }
 }
