--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11760,6 +11760,12 @@ body {
     color: var(--starry);
 }
 
+.counterannunci{
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
+    color: var(--starry);
+}
+
 .xxx{
     border-radius: 10px;
     background-color: rgba(3, 117, 180, 0.6);
@@ -11813,6 +11819,18 @@ body {
     border-radius: 10px;
 }
 
+.allCardsCat{
+    border-radius: 20px;
+    overflow: hidden;
+    transition: all 0.4s;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.433);
+}
+
+.allCardsCat:hover{
+    border-radius: 20px;
+    overflow: hidden;
+    transform: scale(1.03);
+}
 
 
 
