--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11861,6 +11861,7 @@ body {
     }
 
     .boxTitle {
+        padding-top: 0px;
         padding-left: 200px;
         width: 580px;
         position: relative;
