--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -567,6 +567,7 @@ body {
     }
 
     .boxTitle {
+        padding-top: 0px;
         padding-left: 200px;
         width: 580px;
         position: relative;
