--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -301,8 +301,7 @@ body {
 .skill-card .skill-card__body .skill-card__duration__category {
     font-family: 'Lato', sans-serif;
     font-weight: 200;
-    font-style: italic;
-    color: var(--papaya);
+    color:rgba(0, 0, 0, 0.8);
     transition: all 0.5s;
 }
 .description{
@@ -361,7 +360,7 @@ body {
   
 
   .nostreCategorie{
-    color: var(--irises);
+    color: var(--papaya);
     padding-top: 5rem;
     padding-bottom: 2rem;
    font-family: 'Lato', sans-serif;
@@ -409,7 +408,7 @@ body {
 }
 
 .btnP{
-    background-color: var(--irises);
+    background-color: var(--papaya);
     color: var(--panna);
     font-size: 25px;
     font-family: 'Lato', sans-serif;
@@ -445,7 +444,7 @@ body {
 
 .btnP:hover{
     background-color: var(--panna);
-    color: var(--irises);
+    color: var(--papaya);
 }
 
 
@@ -464,13 +463,13 @@ body {
 .tuttigliannunci{
     font-family: 'Lato', sans-serif;
     font-weight: 900;
-    color: var(--starry);
+    color: var(--papaya);
 }
 
 .counterannunci{
     font-family: 'Lato', sans-serif;
-    font-weight: 900;
-    color: var(--starry);
+    font-weight: 400;
+    color: var(--papaya);
 }
 
 .xxx{
@@ -513,6 +512,11 @@ body {
     border-radius: 10px;
 }
 
+.roundedD{
+    border-radius: 20px;
+    overflow: hidden;
+}
+
 .titleDetails{
     font-size: 38px;
     font-family: 'Lato', sans-serif;
@@ -539,11 +543,68 @@ body {
     transform: scale(1.03);
 }
 
-.btn{
-    width: 50px;
+.newTest{
+    background-color: #f2f2f2;
 }
 
+.card-img-top{
+    height: 100%;
+    width: 100%;
+    padding-top: 24px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 10px;
+    border-radius: 40px;
+    transition: all 0.5s;
+}
 
+.card-img-top:hover{
+    transform: scale(1.16) translateY(-6px);
+    border-radius: 40px 40px 0px 0px;
+}
+
+.Mycard{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0px;
+    box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.6);
+    border-radius: 20px;
+    height: 365px;
+}
+
+.buttonbox{
+    display: flex;
+    flex-direction: row;
+}
+
+.ms-pers{
+    margin-left: 150px;
+}
+
+.custombtnBg{
+    /* background-color: rgba(3, 117, 180); */
+    border-radius: 10px;
+    background-color:var(--papaya);
+    color: var(--panna);
+    transition: all 0.5s;
+}
+
+.custombtnBg:hover{
+    transform: scale(1.1);
+    /* background-color: rgba(3, 117, 180); */
+    background-color: var(--papaya);
+    color: var(--panna);
+}
+
+.card-body{
+    flex: none;
+    padding: 0px;
+}
 
 
 
@@ -587,7 +648,6 @@ body {
         width: 580px;
         position: relative;
     }
-
 
     .title {
         font-size: 80px;
