--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11872,13 +11872,18 @@ body {
 }
 
 .buttonbox{
+    width: 100%;
     display: flex;
     flex-direction: row;
+    position: relative;
 }
 
 .ms-pers{
-    margin-left: 150px;
+    position: absolute;
+    left: 60%;    
 }
+
+
 
 .custombtnBg{
     /* background-color: rgba(3, 117, 180); */
