--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -578,13 +578,18 @@ body {
 }
 
 .buttonbox{
+    width: 100%;
     display: flex;
     flex-direction: row;
+    position: relative;
 }
 
 .ms-pers{
-    margin-left: 150px;
+    position: absolute;
+    left: 60%;    
 }
+
+
 
 .custombtnBg{
     /* background-color: rgba(3, 117, 180); */
