--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -318,6 +318,13 @@ textarea{
     text-shadow: 0px 0px 5px var(--custom-black);
 }
 
+.diconoDiNoi{
+    color: var(--papaya);
+    padding-bottom: 1rem;
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
+}
+
 
 /* Media query */
 
