--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12313,10 +12313,18 @@ nav.presto-nav, nav.presto-nav2 {
     position: relative;
 }
 
-.revisorBtns{
+.revisorBtnRefuse{
     border-radius: 30px;
     padding: 10px 20px;
     width: 230px;
+    /* transform: translateY(-34px); */
+}
+
+.revisorBtnAccept{
+    border-radius: 30px;
+    padding: 10px 20px;
+    width: 230px;
+    /* transform: translateY(26px); */
 }
 
 .divDiv{
@@ -12423,6 +12431,15 @@ nav.presto-nav, nav.presto-nav2 {
     position: absolute;
     top: 75px;
     width: 100%;
+}
+
+.carousel-indicators{
+    margin-bottom: -30px;
+}
+
+#thumbnailsBtns{
+    background-color: transparent;
+    border: none;
 }
 
 /* Work with us */
