--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -35,10 +35,18 @@
     position: relative;
 }
 
-.revisorBtns{
+.revisorBtnRefuse{
     border-radius: 30px;
     padding: 10px 20px;
     width: 230px;
+    /* transform: translateY(-34px); */
+}
+
+.revisorBtnAccept{
+    border-radius: 30px;
+    padding: 10px 20px;
+    width: 230px;
+    /* transform: translateY(26px); */
 }
 
 .divDiv{
@@ -145,6 +153,15 @@
     position: absolute;
     top: 75px;
     width: 100%;
+}
+
+.carousel-indicators{
+    margin-bottom: -30px;
+}
+
+#thumbnailsBtns{
+    background-color: transparent;
+    border: none;
 }
 
 /* Work with us */
