--- a/resources/css/style-nav.css
+++ b/resources/css/style-nav.css
@@ -47,7 +47,7 @@
     width: 190px;
 }
 
-.dropBgSmall1 > li > a, .dropBgSmall1 > a, .dropBgSmall1 .dropdown-divider, .dropBgSmall2 > li > a, .dropBgSmall2 > a, .dropBgSmall2 .dropdown-divider{
+.dropBgSmall1 > div > li > a, .dropBgSmall1 > div > a, .dropBgSmall1 .dropdown-divider, .dropBgSmall2 > div > li > a, .dropBgSmall2 > div> a, .dropBgSmall2 .dropdown-divider{
     color: var(--starry) !important;
 }
 
