--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -625,10 +625,10 @@ body {
     border: 0px;
 }
 
-.lead{
+.descrizioneTest{
     font-family: 'Lato', sans-serif;
-    font-weight: 100;
-    font-size: 1.25rem;
+    font-weight: 400;
+    font-size: 1.20rem;
     
 }
 .bg-dabiblu{
