fixed carousel in revisor card, created migration to save newsletter emails in db

--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -49,6 +49,12 @@
     /* transform: translateY(26px); */
 }
 
+.revisorBtns{
+    border-radius: 30px;
+    /* padding: 10px 20px; */
+    /* width: 250px; */
+}
+
 .divDiv{
     border-radius: 50%;
     border: 3px solid var(--starry);
