--- a/resources/css/style-footer.css
+++ b/resources/css/style-footer.css
@@ -1,5 +1,5 @@
 .nav-link{
-    color: var(--panna);
+    color: var(--cblack);
 }
 
 .nav-link:hover{
@@ -23,7 +23,7 @@
     color: var(--papaya);
 }
 .papayaBg:hover{
-    color: var(--panna);
+    color: var(--cblack);
 }
 
 #footerPrestoLogo{
@@ -37,25 +37,25 @@
 }
 
 #footerContainer{
-    background-color: var(--starry);
+    background-color: rgb(236, 236, 236);
 }
 
 #footerInfoListAnchor, #footerCategoriesListAnchor, #footerAppsLinksAnchor, .socialsAnchors, #contactsP{
-    color: var(--panna);
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    color: var(--cblack);
+    /* text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); */
 }
 
 #footerCategoriesTitle, #footerInfoTitle, #footerAppsLinksTitle, #footerSocialsTitle{
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    /* text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); */
     font-weight: 900;
 }
 
 #footerLogoText{
-    color: var(--papaya);
+    color: var(--starry);
     font-size: 30px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    /* text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); */
 }
 
 #footerAppsSection, #footerSocialsSection{
@@ -64,7 +64,7 @@
 
 #mottoPDiv > p{
     padding-left: 14px;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    /* text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); */
 }
 
 #footerPart1{
@@ -72,7 +72,7 @@
 }
 
 .contactsIcons{
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    /* text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); */
 }
 
 @media screen and (min-width: 768px) {
