--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -673,7 +673,6 @@ body {
 
     .boxTitle {
         padding-top: 0px;
-        padding-left: 200px;
         width: 580px;
         position: relative;
     }
@@ -729,5 +728,13 @@ body {
     .skill-card .skill-card__body .skill-card__duration__category:hover {
         color: var(--celesteChiaro);
         font-weight: bolder;
+    }
+}
+
+
+@media screen and (min-width: 992px) {
+
+    .boxTitle {
+        padding-left: 200px;
     }
 }
