--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -636,6 +636,26 @@ body {
     background-color:rgba(3, 117, 180, 0.2);
 }
 
+/* PAGINAZIONE */
+#cardsRow > nav{ 
+    display: flex;
+    justify-content: center;
+}
+.pagination{
+    margin: 50px  auto !important;
+}
+
+.page-link{
+    color: var(--starry);
+}
+.page-link:hover{
+    color: var(--starry);
+}
+
+.page-item.active .page-link{
+    background-color: var(--starry);
+    border-color: var(--starry);
+}
 
 
 @media screen and (min-width:410px) {
@@ -739,3 +759,6 @@ body {
         padding-left: 200px;
     }
 }
+
+
+
